feat: create wallet-desktop repository from ewa repository