@@ -1,47 +1,61 @@
-<img src="https://raw.githubusercontent.com/CREDITSCOM/Documentation/master/Src/Logo_Credits_horizontal_black.png" align="center">
+<h1>CS Desktop Wallet</h3>
+<h2>What's CS Desktop wallet?</h2>
+<p>CS Desktop Wallet - the client application is a desktop version of the wallet. Wallet Desktop is implemented in Java. This version of the wallet provides a high level of security, privacy and stability.
+Wallet Desktop only works in conjunction with the network node running on the user's computer and includes the Smart Contract executor module.
+Current functionality:</p>
+<ul>
+<li>View the balance</li>
+<li>View transaction history</li>
+<li>View transactions with smart contracts</li>
+<li>Create a transaction</li>
+<li>Creating a new token, using a smart contract</li>
+<li>Create and download a smart contract</li>
+<li>Operations with smart contracts</li>
+</ul>
+<h2>System requirements:</h2>
+<p>Minimum system requirements:
 
-[Documentation](https://developers.credits.com/en/Articles/Platform) \|
-[Guides](https://developers.credits.com/en/Articles/Guides) \|
-[News](https://credits.com/en/Home/News)
+Operating system: Windows® 7 / Windows® 8 / Windows® 10 64-bit (with the last update package)
+Processor (CPU): with frequency of 1 GHz (or faster) with PAE, NX and SSE2 support;
+Memory (RAM): 2–4 Gb
+HDD: 1 Gb
+Internet connection: 3 Mbit/s</p>
 
-[![Twitter](https://img.shields.io/twitter/follow/creditscom.svg?label=Follow&style=social)](https://twitter.com/intent/follow?screen_name=creditscom)
-[![AGPL License](https://img.shields.io/github/license/CREDITSCOM/ewa.svg?color=green&style=plastic)](LICENSE)
-[![Build Status](http://161.156.96.18:8080/buildStatus/icon?job=ewa_build&lastBuild)](http://161.156.96.18:8080/job/ewa_build/lastBuild/)
+<p>Recommended system requirements:
 
-## EWA
-###### Contract Executor and Wallet Applications
-This repository contains following main modules:
+Operating system: Windows® 7 / Windows® 8 / Windows® 10 64-bit (with the last update package)
+Processor (CPU): Intel® Core ™ i3 or AMD Phenom ™ X3 8650
+Memory (RAM): 4–8 Gb
+SSD: 1 Gb
+Internet connection: 5 Mbit/s.</p>
+<h2>Contribution</h2>
+<p>Thank you for considering to help out with the source code! We welcome contributions from anyone on the internet, and are grateful for even the smallest of fixes!
+If you'd like to contribute to CS-Wallet-Desktop, please fork, fix, commit and send a pull request for the maintainers to review and merge into the main code base. If you wish to submit more complex changes though, please check up with the core devs first on our <a href="https://developers.credits.com/">Developers portal</a> and <a href="https://github.com/CREDITSCOM/Documentation/blob/master/Contribution.md"> Contribution file</a> to ensure those changes are in line with the general philosophy of the project and/or get some early feedback which can make both your efforts much lighter as well as our review and merge procedures quick and simple.
+Please make sure your contributions adhere to our coding guidelines:</p>
+<ul>
+<li>Code must adhere to the <a href="https://google.github.io/styleguide/javaguide.html">Google Java Style Guide</a></li>
+<li>Code must be well documented adhering the Google’s guidelines</li>
+<li>Pull requests need to be based on and opened against the master branch</li>
+<li>Commit messages should be prefixed with the package(s) they modify</li>
+</ul>
+<h3>Resources</h3>
 
-- Contract Executor
+<a href="https://credits.com//">CREDITS Website</a>
 
-- [Wallet Desktop](https://github.com/CREDITSCOM/ewa/tree/master/wallet-desktop)
+<a href="https://github.com/CREDITSCOM/DOCUMENTATION">Documentation</a>
 
-- sc-api
+<a href="https://credits.com/Content/Docs/TechnicalWhitePaperCREDITSEng.pdf">Whitepaper</a>
 
-- api-client
+<a href="https://credits.com/Content/Docs/TechnicalPaperENG.pdf">Technical paper</a>
 
-##### What is Contract Executor?
-Contract Executor is app for deploy and execute methods of smart-contract
-##### What is Wallet Desktop? 
-It is desktop version of credits wallet
-##### What is SC-API?
-It is API module contains necessary classes for smart-contact deployment
-##### What is API-Client?
-API contains general tools for integrate with node 
+<a href="https://developers.credits.com/">Developers portal</a>
 
-
-##### Used environment
-- [JDK 11](https://openjdk.java.net/projects/jdk/11/)
-- [OpenJFX version 11](https://openjfx.io/)
-- [Maven version 3.6.1](https://maven.apache.org/docs/3.6.1/release-notes.html) 
-
-##### How to build
-For build all modules use following maven command on root project level
-```shell
-mvn clean install
-```
-For run wallet you have to install openjfx sdk and then you need specify path to lib folder of openjfx. 
-Use following command as example
-```shell
-java --module-path %your_module_path_here% --add-modules=javafx.controls,javafx.fxml,javafx.graphics -jar wallet-desktop.jar`
-```
+<a href="http://forum.credits.com/">Credits forum</a>
+<h3>Community links</h3>
+   <a href="https://t.me/creditscom"><img src ="https://simpleicons.org/icons/telegram.svg" height=40 widht=40 ></a>
+   <a href="https://twitter.com/creditscom"><img src ="https://simpleicons.org/icons/twitter.svg" height=40 widht=40 ></a>
+   <a href="https://www.reddit.com/r/CreditsOfficial/"><img src ="https://simpleicons.org/icons/reddit.svg" height=40 widht=40></a> 
+   <a href="https://medium.com/@credits"><img src="https://simpleicons.org/icons/medium.svg" height=40 widht=40></a>
+   <a href="https://www.instagram.com/credits_com/"><img src="https://simpleicons.org/icons/facebook.svg" height=40 widht=40></a>
+   <a href="https://www.facebook.com/creditscom"><img src="https://simpleicons.org/icons/instagram.svg" height=40 widht=40></a>
+   <a href="https://www.youtube.com/channel/UC7kjX_jgauCqmf_a4fqLGOQ"><img src="https://simpleicons.org/icons/youtube.svg" height=40 widht=40></a>
